# ISOEngine

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/sprite/: CMakeLists.txt  sprite.c
examples/window/: CMakeLists.txt  window.c
include/isoengine/: engine.h  isoengine.h
src/: clock.c  clock.h  engine.c  engine.h  macro.h  memory.c  memory.h  object.c  object.h  render.c  window.c
tests/: CMakeLists.txt  test_engine.c  test_object.c
